Embed 'Where' view controller in the container array

--- a/TBA/Ariel's Storyboard.storyboard
+++ b/TBA/Ariel's Storyboard.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="h6a-Hj-VDx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="72d-mP-6bV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Welcome View Controller-->
         <scene sceneID="ceW-96-vhI">
             <objects>
-                <viewController id="72d-mP-6bV" sceneMemberID="viewController">
+                <viewController id="72d-mP-6bV" customClass="BONWelcomeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Aa-NG-pCA"/>
                         <viewControllerLayoutGuide type="bottom" id="B6Q-Pl-gAE"/>
@@ -42,6 +42,11 @@
                                         <rect key="frame" x="0.0" y="231" width="250" height="73"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="51"/>
                                         <state key="normal" title="Log A Meal"/>
+                                        <connections>
+                                            <segue destination="WO3-7G-uBO" kind="popoverPresentation" popoverAnchorView="VLN-hz-tuz" id="JA1-yw-m8H">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -57,10 +62,18 @@
             </objects>
             <point key="canvasLocation" x="549" y="435"/>
         </scene>
+        <!--containerViewController-->
+        <scene sceneID="kPn-ho-j8y">
+            <objects>
+                <viewControllerPlaceholder storyboardName="BONContainer" referencedIdentifier="containerViewController" id="WO3-7G-uBO" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qGq-bB-N8w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1027.5" y="435"/>
+        </scene>
         <!--Where View Controller-->
         <scene sceneID="sDS-j4-FlD">
             <objects>
-                <viewController id="h6a-Hj-VDx" customClass="BONWhereViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="whereViewController" id="h6a-Hj-VDx" customClass="BONWhereViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="W3n-k8-DB5"/>
                         <viewControllerLayoutGuide type="bottom" id="hWm-mq-lkt"/>
@@ -125,14 +138,6 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="551" y="1092"/>
-        </scene>
-        <!--mainStoryboardNavigationController-->
-        <scene sceneID="rZe-ky-T06">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="mainStoryboardNavigationController" id="U4h-WF-Nn5" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6m8-Xl-7vE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1052.5" y="435"/>
         </scene>
     </scenes>
 </document>
