--- a/TBA/Ariel's Storyboard.storyboard
+++ b/TBA/Ariel's Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="72d-mP-6bV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2sB-Rf-f0n">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -43,9 +43,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="51"/>
                                         <state key="normal" title="Log A Meal"/>
                                         <connections>
-                                            <segue destination="WO3-7G-uBO" kind="popoverPresentation" popoverAnchorView="VLN-hz-tuz" id="JA1-yw-m8H">
-                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                            </segue>
+                                            <segue destination="WO3-7G-uBO" kind="show" id="2WR-q2-ewl"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -57,10 +55,11 @@
                             <constraint firstItem="Fpk-Rd-FOA" firstAttribute="centerX" secondItem="YDy-cS-I79" secondAttribute="centerX" id="fny-s0-cUY"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="40z-sw-dZC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="56A-wg-5f4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="549" y="435"/>
+            <point key="canvasLocation" x="1361" y="435"/>
         </scene>
         <!--containerViewController-->
         <scene sceneID="kPn-ho-j8y">
@@ -68,7 +67,7 @@
                 <viewControllerPlaceholder storyboardName="BONContainer" referencedIdentifier="containerViewController" id="WO3-7G-uBO" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qGq-bB-N8w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1027.5" y="435"/>
+            <point key="canvasLocation" x="1839.5" y="435"/>
         </scene>
         <!--Where View Controller-->
         <scene sceneID="sDS-j4-FlD">
@@ -138,6 +137,24 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="551" y="1092"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ph9-fl-MTb">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2sB-Rf-f0n" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6me-BH-zu6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="72d-mP-6bV" kind="relationship" relationship="rootViewController" id="ewu-Wr-sci"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LcZ-Vd-gyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="724" y="435"/>
         </scene>
     </scenes>
 </document>
