--- a/TBA/FirebaseTest.storyboard
+++ b/TBA/FirebaseTest.storyboard
@@ -17,13 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mEz-t3-Bao">
-                                <rect key="frame" x="268" y="285" width="64" height="30"/>
-                                <state key="normal" title="Add User"/>
-                                <connections>
-                                    <action selector="addUserTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="So8-lp-AWr"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cLO-KW-LK0" userLabel="Username">
                                 <rect key="frame" x="228" y="161" width="145" height="30"/>
                                 <constraints>
@@ -40,20 +33,46 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Meal Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oPK-Ze-zMT">
+                                <rect key="frame" x="228" y="247" width="145" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMj-vb-cRZ">
+                                <rect key="frame" x="268" y="105" width="65" height="30"/>
+                                <state key="normal" title="Add Meal"/>
+                                <connections>
+                                    <action selector="addMealTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="Tli-nS-kQI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mEz-t3-Bao">
+                                <rect key="frame" x="268" y="285" width="64" height="30"/>
+                                <state key="normal" title="Add User"/>
+                                <connections>
+                                    <action selector="addUserTapped:" destination="5ae-3u-lGv" eventType="touchUpInside" id="So8-lp-AWr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eVa-RE-r9O" firstAttribute="centerX" secondItem="mEz-t3-Bao" secondAttribute="centerX" id="3wK-7a-vfz"/>
                             <constraint firstItem="mEz-t3-Bao" firstAttribute="centerX" secondItem="tmx-qJ-zAr" secondAttribute="centerX" id="8t0-5j-xvG"/>
+                            <constraint firstItem="oPK-Ze-zMT" firstAttribute="centerX" secondItem="eVa-RE-r9O" secondAttribute="centerX" id="9Sh-aw-eW6"/>
                             <constraint firstItem="mEz-t3-Bao" firstAttribute="top" secondItem="eVa-RE-r9O" secondAttribute="bottom" constant="42" id="DS0-AV-UzG"/>
+                            <constraint firstItem="oPK-Ze-zMT" firstAttribute="width" secondItem="eVa-RE-r9O" secondAttribute="width" id="Gm7-Qk-9yY"/>
                             <constraint firstItem="mEz-t3-Bao" firstAttribute="centerY" secondItem="tmx-qJ-zAr" secondAttribute="centerY" id="GuJ-E6-S7f"/>
+                            <constraint firstItem="RMj-vb-cRZ" firstAttribute="centerX" secondItem="tmx-qJ-zAr" secondAttribute="centerX" id="HvB-el-Zuc"/>
+                            <constraint firstItem="oPK-Ze-zMT" firstAttribute="top" secondItem="eVa-RE-r9O" secondAttribute="bottom" constant="4" id="LOO-2c-2e1"/>
+                            <constraint firstItem="RMj-vb-cRZ" firstAttribute="top" secondItem="UFa-rE-EC2" secondAttribute="bottom" constant="41" id="TlO-rX-Ul2"/>
                             <constraint firstItem="mEz-t3-Bao" firstAttribute="top" secondItem="cLO-KW-LK0" secondAttribute="bottom" constant="94" id="UnA-4T-bho"/>
+                            <constraint firstItem="oPK-Ze-zMT" firstAttribute="height" secondItem="eVa-RE-r9O" secondAttribute="height" id="XgL-Ie-7BD"/>
                             <constraint firstItem="cLO-KW-LK0" firstAttribute="centerX" secondItem="mEz-t3-Bao" secondAttribute="centerX" id="uj9-GA-n1b"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uLe-Ag-mlw"/>
                     <connections>
                         <outlet property="emailTextField" destination="cLO-KW-LK0" id="bJc-eM-QDS"/>
+                        <outlet property="mealDateTextField" destination="oPK-Ze-zMT" id="sYG-WF-lBY"/>
                         <outlet property="passwordTextField" destination="eVa-RE-r9O" id="hjv-ju-r8c"/>
                     </connections>
                 </viewController>
